# ffmpeg-cxx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: ffmpeg-cpp-config.cmake.in
src/: CMakeLists.txt  frame.cpp  frame.ixx  module.ixx
src/codec/: CMakeLists.txt  decoder.cpp  decoder.ixx  module.ixx
src/filter/: CMakeLists.txt  filter.cpp  filter.ixx
src/format/: CMakeLists.txt  format.cpp  format.ixx
src/util/: CMakeLists.txt  error.ixx  frame.ixx  module.ixx  packet.ixx
